--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html lang='en'>
 <head>
 <title>Concentration of wealth</title>
-<meta charset='utf-8'>
-<link rel='stylesheet' type='text/css' href='./style.css'>
+<meta charset='utf-8' />
+<meta name='viewport' content='width=device-width, initial-scale=1' />
+<link rel='stylesheet' type='text/css' href='./style.css' />
 </head>
 
 <body>
