the problem in a nutshell

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 
 <body>
 
-<h1 class='mainheader'>concentrationofwealth.org</h1>
+<h1 style='font-size:110%;' class='mainheader'>concentrationofwealth.org</h1>
 
 <h2>We have a problem.</h2>
 
-<p>We’re approaching a situation in which one person owns everything. This happens globally, and exponentially fast. If we do nothing, our society will collapse.</p>
+<p>We’re approaching a situation in which one person owns everything. This happens globally, and exponentially fast. If we do nothing, our society will collapse. <a href='./problem/'>Read more.</a></p>
 
 <h2>There is a solution.</h2>
 
