basic income and wealth tax

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <h2>There is a solution.</h2>
 
-<p>By collecting a wealth tax and using the revenue to provide a universal basic income for everyone, we can stabilize the wealth distribution and prevent the collapse.</p>
+<p>By collecting a wealth tax and using the revenue to provide a universal basic income for everyone, we can stabilize the wealth distribution and prevent the collapse. <a href='./solution/'>Read more.</a></p>
 
 <h2>Your help is needed.</h2>
 
